[package]
name = "pvf-checker"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.24"
subxt = "0.29.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

parity-scale-codec = "3.1.5" # required by subxt

polkadot-node-core-pvf = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-node-core-pvf-prepare-worker = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0" }

sp-maybe-compressed-blob = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
