[package]
name = "pvf-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive"] }
futures = "0.3.24"
subxt = "0.29.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

parity-scale-codec = "3.6.4" # required by subxt

polkadot-node-core-pvf = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-node-core-pvf-prepare-worker = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }

sp-maybe-compressed-blob = { git = "https://github.com/paritytech/substrate", branch = "master" }
