[package]
name = "pvf-checker"
version = "0.99.0+master"
edition = "2021"

[[bin]]
name = "pvf-checker"
path = "src/main.rs"

[[bin]]
name = "prechecker-worker"
path = "src/prepare_worker.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.28"
subxt = "0.32.1"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

parity-scale-codec = "3.6.8" # required by subxt

polkadot-node-core-pvf = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
polkadot-node-core-pvf-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
polkadot-node-core-pvf-prepare-worker = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

sp-maybe-compressed-blob = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
# required by decl_worker_main! macro
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
